# utils

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  vix.json
.github/workflows/: utils-strict-ci.yml
cmake/: vix_utilsConfig.cmake.in
examples/: env_time_uuid.cpp  log_demo.cpp  validation_demo.cpp
include/vix/utils/: ConsoleMutex.hpp  Env.hpp  Logger.hpp  NetworkError.hpp  Result.hpp  ScopeGuard.hpp  ServerPrettyLogs.hpp  String.hpp  Time.hpp  UUID.hpp  Validation.hpp  Version.hpp  ascii_utils.hpp  utils.hpp
src/: Logger.cpp  Version.cpp  ascii_utils.cpp
tests/: test_ascii_utils.cpp
